[gd_scene load_steps=4 format=3 uid="uid://cv3nwus5cs7sf"]

[ext_resource type="Script" path="res://gun.gd" id="1_55vjh"]
[ext_resource type="Texture2D" uid="uid://fufiu5plk4t1" path="res://Boss/arrow.png" id="2_yrba6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xyqjk"]
radius = 5.99999

[node name="Gun" type="Area2D"]
position = Vector2(1, 0)
rotation = 0.00454974
script = ExtResource("1_55vjh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.99999, 0.00454972)
shape = SubResource("CircleShape2D_xyqjk")
debug_color = Color(0.603922, 0.533333, 0.27451, 0.419608)

[node name="WeaponPivot" type="Marker2D" parent="."]
position = Vector2(-0.99999, 0.00454973)

[node name="Arrow" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(1.99998, -0.00909946)
rotation = 1.54061
scale = Vector2(0.005, 0.005)
texture = ExtResource("2_yrba6")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Arrow"]
unique_name_in_owner = true
position = Vector2(0, -50)
rotation = -1.58186

[node name="gun_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="timeout" from="gun_timer" to="." method="_on_timer_timeout"]
